hphp/test/zend/good/Zend/tests/traits/bug54441.php.expectf

Fatal error: Unknown trait '' in %s/bug54441.php on line 7
